--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,16 @@ requires-python = ">=3.10"
 dependencies = [
     "sqlalchemy (>=2.0.40,<3.0.0)",
     "psycopg2 (>=2.9.10,<3.0.0)",
-    "dotenv (>=0.9.9,<0.10.0)"
+    "dotenv (>=0.9.9,<0.10.0)",
+    "fastapi (>=0.115.12,<0.116.0)",
+    "uvicorn (>=0.34.0,<0.35.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+fastapi-cli = "^0.0.7"
+
