--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "psycopg2 (>=2.9.10,<3.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
     "fastapi (>=0.115.12,<0.116.0)",
-    "uvicorn (>=0.34.0,<0.35.0)"
+    "uvicorn (>=0.34.0,<0.35.0)",
+    "openai (>=1.71.0,<2.0.0)"
 ]
 
 
